--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -9,8 +9,15 @@ pushit_cronjob_system_monitoring = Push-It System Monitoring
 pushit_cronjob_monitoring_type = Monitoring-Typ
 
 # Page titles
-pushit_settings = Einstellungen
-pushit_subscriptions = Subscriptions
+pushit_settings = Einstellun# Browser help instructions
+pushit_safari_step1 = 1. Klicken Sie auf das <b>Schloss-Symbol</b> in der Adressleiste
+pushit_safari_step2 = 2. Wählen Sie <b>"Einstellungen für diese Website"</b>
+pushit_safari_step3 = 3. Setzen Sie <b>"Benachrichtigungen" auf "Erlauben"</b>
+pushit_safari_step4 = 4. Laden Sie die Seite neu
+
+pushit_chrome_step1 = 1. Klicken Sie auf das <b>Schloss-Symbol</b> in der Adressleiste
+pushit_chrome_step2 = 2. Aktivieren Sie <b>"Benachrichtigungen"</b>
+pushit_chrome_step3 = 3. Laden Sie die Seite neut_subscriptions = Subscriptions
 pushit_send = Senden  
 pushit_history = Verlauf
 pushit_backend_notify = Backend Benachrichtigungen
@@ -320,18 +327,18 @@ pushit_repair_button = Reparieren
 pushit_deactivate_notifications_button = Benachrichtigungen deaktivieren
 
 # Browser help instructions
-pushit_safari_step1 = 1. Klicken Sie auf das <strong>Schloss-Symbol</strong> in der Adressleiste
-pushit_safari_step2 = 2. Wählen Sie <strong>"Einstellungen für diese Website"</strong>
-pushit_safari_step3 = 3. Setzen Sie <strong>"Benachrichtigungen" auf "Erlauben"</strong>
+pushit_safari_step1 = 1. Klicken Sie auf das <b>Schloss-Symbol</b> in der Adressleiste
+pushit_safari_step2 = 2. Wählen Sie <b>"Einstellungen für diese Website"</b>
+pushit_safari_step3 = 3. Setzen Sie <b>"Benachrichtigungen" auf "Erlauben"</b>
 pushit_safari_step4 = 4. Laden Sie die Seite neu
 
-pushit_chrome_step1 = 1. Klicken Sie auf das <strong>Schloss-Symbol</strong> in der Adressleiste
-pushit_chrome_step2 = 2. Aktivieren Sie <strong>"Benachrichtigungen"</strong>
+pushit_chrome_step1 = 1. Klicken Sie auf das <b>Schloss-Symbol</b> in der Adressleiste
+pushit_chrome_step2 = 2. Aktivieren Sie <b>"Benachrichtigungen"</b>
 pushit_chrome_step3 = 3. Laden Sie die Seite neu
 
-pushit_firefox_step1 = 1. Klicken Sie auf das <strong>Schild-Symbol</strong> in der Adressleiste
-pushit_firefox_step2 = 2. Wählen Sie <strong>"Berechtigung bearbeiten"</strong>
-pushit_firefox_step3 = 3. Setzen Sie <strong>"Desktop-Benachrichtigungen" auf "Erlauben"</strong>
+pushit_firefox_step1 = 1. Klicken Sie auf das <b>Schild-Symbol</b> in der Adressleiste
+pushit_firefox_step2 = 2. Wählen Sie <b>"Berechtigung bearbeiten"</b>
+pushit_firefox_step3 = 3. Setzen Sie <b>"Desktop-Benachrichtigungen" auf "Erlauben"</b>
 pushit_firefox_step4 = 4. Laden Sie die Seite neu
 
 # Backend statistics
